--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" href="styles.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Curriculum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
   <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <header class="container-fluid bg-primary d-flex justify-content-center">
-    <h1>CURRICULUM VITAE</h1>
-  </header>
-  <section class="container-fluid bg-primary">
+  <header class="container-fluid d-flex border border-primary border-3" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+    <div class="container">
+      <img src="img/CherokeeSRT8.jpg" class=" rounded-circle img-fluid text-left"  alt="CherokeeSRT8 ">
+    </div>
+    <div class="container">
+      <h1 class="fw-bold container text-left" >CURRICULUM VITAE</h1>
+    </div>
+    </header>
+  <section class="container-fluid p-2 border border-primary border-3" style="background-color: #BDCDD6" >
     <div class="container text-left">
         <div class="row">
-          <div class="col">
-            <h3 class="fw-bold">Datos Personales</h3>
-            <section class="container-fluid bg-primary">
+          <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+            <h3 class="fw-bold border border-3 rounded -3 p-2">Datos Personales</h3>
+            <section class="container-fluid rounded-3">
                 <ol class="list-group">
+                  <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                      <div class="fw-bold">Nombre</div>
+                      <div> Christian Jesus Villanueva Piro</div>
+                    </div>
+                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="ms-2 me-auto">
                         <div class="fw-bold">Cedula de identidad </div>
@@ -64,9 +74,9 @@
                   </ol>
             </section> 
           </div>
-          <div class="col">
-           <h3 class="fw-bold">Antecedentes Laborales</h3>
-            <section class="container-fluid bg-primary">
+          <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+           <h3 class="fw-bold border border-3 rounded -3 p-2">Antecedentes Laborales</h3>
+            <section class="container-fluid">
                 <ol class="list-group text-left">
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="ms-2 me-auto">
@@ -100,12 +110,12 @@
           </div>
       </div>
     </section>
-    <section class="container-fluid bg-primary">
+    <section class="container-fluid border border-primary border-3 p-2" style="background-color: #BDCDD6">
         <div class="container text-left">
             <div class="row">
-              <div class="col">
-                <h3 class="fw-bold">Habilidades</h3>
-                <section class="container-fluid bg-primary">
+              <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+                <h3 class="fw-bold border border-3 rounded -3 p-2">Habilidades</h3>
+                <section class="container-fluid">
                     <ol class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-start">
                           <div class="ms-2 me-auto">
@@ -134,9 +144,9 @@
               
                 </section> 
               </div>
-              <div class="col">
-               <h3 class="fw-bold">Antecedentes Academicos</h3>
-                <section class="container-fluid bg-primary">
+              <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+               <h3 class="fw-bold border border-3 rounded -3 p-2">Antecedentes Academicos</h3>
+                <section class="container-fluid">
                     <ol class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-start">
                           <div class="ms-2 me-auto">
@@ -176,16 +186,16 @@
               </div>
           </div>
         </section>
-        <section class="container-fluid bg-primary">
+        <section class="container-fluid p-2 border border-primary border-3" style="background-color: #BDCDD6">
             <div class="container text-left">
                 <div class="row">
-                  <div class="col">
-                    <h3 class="fw-bold">Hobbys</h3>
-                    <section class="container-fluid bg-primary">
+                  <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+                    <h3 class="fw-bold border border-3 rounded -3 p-2">Hobbys</h3>
+                    <section class="container-fluid">
                         <ol class="list-group">
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                               <div class="ms-2 me-auto">
-                                <div class="fw-bold"><a href="https://www.youtube.com/watch?v=BIB02FsDg8U" target="_blank">Crossfit</a></div>
+                                <div class="fw-bold"><a class= "btn btn-primary" href="https://www.youtube.com/watch?v=BIB02FsDg8U" target="_blank" role="button">Crossfit</a></div>
                                 </div>
                             </li>  
                             <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -195,7 +205,7 @@
                               </li>  
                               <li class="list-group-item d-flex justify-content-between align-items-start">
                                 <div class="ms-2 me-auto">
-                                  <div class="fw-bold"><a href="https://pedalia.cc/ciclismo-montana-modalidad-downhill-dh" target="_blank">DownHill</a></div>
+                                  <div class="fw-bold"><a class= "btn btn-primary" href="https://pedalia.cc/ciclismo-montana-modalidad-downhill-dh" target="_blank" role="button">DownHill</a></div>
                                   
                                 </div>
                               </li> 
@@ -206,15 +216,15 @@
                               </li>  
                               <li class="list-group-item d-flex justify-content-between align-items-start">
                                 <div class="ms-2 me-auto">
-                                  <div class="fw-bold"><a href="https://www.motor.es/que-es/tuning" target="_blank">Tunning Automotriz</a> </div>
+                                  <div class="fw-bold"><a class= "btn btn-primary" href="https://www.motor.es/que-es/tuning" target="_blank" role="button">Tunning Automotriz</a> </div>
                                 </div>
                               </li>  
                         </ol>
                     </section> 
                   </div>
-                  <div class="col">
-                   <h3 class="fw-bold">Referencias Laborales</h3>
-                    <section class="container-fluid bg-primary">
+                  <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+                   <h3 class="fw-bold border border-3 rounded -3 p-2">Referencias Laborales</h3>
+                    <section class="container-fluid">
                         <ol class="list-group">
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                               <div class="ms-2 me-auto">
@@ -235,12 +245,12 @@
               </div>
             </section>    
 </body>
-<footer class="container-fluid bg-primary">
-    <div class="container text-left">
+<footer class="container-fluid border border-primary border-3 p-2" style="background-color: #BDCDD6">
+    <div class="container text-left ">
         <div class="row">
-          <div class="col">
-            <h3 class="fw-bold">Contacto</h3>
-            <section class="container-fluid bg-primary">
+          <div class="col border border-3 rounded-3 p-2" style="background: radial-gradient(circle, rgba(0,212,255,1) 25%, rgba(4,159,241,1) 66%, rgba(14,14,201,1) 100%);">
+            <h3 class="fw-bold border border-3 rounded -3 p-2">Contacto</h3>
+            <section class="container-fluid">
                 <ol class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="ms-2 me-auto">
@@ -256,13 +266,13 @@
                     </li>  
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
-                          <div class="fw-bold">Correo </div>
+                          <div class="fw-bold">Correo</div>
                           <a href="mailto:tochristian.villanueva03@inacapmail.cl">christian.villanueva03@inacapmail.cl </a>
                         </div>
                     </li> 
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
-                          <div class="fw-bold"><a href="https://github.com/Cjhota08/Programacion_Frontend.git" target="_blank"> Ir al Repositorio GIT</a> </div>
+                          <div class="fw-bold"><a href="https://github.com/Cjhota08/EvaluacionN2_Frontend.git" target="_blank"> Ir al Repositorio GIT</a> </div>
                         </div>
                     </li>  
                 </ol>
